standard.css added

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./template.js"></script>
     <script src="./script.js"></script>
+    <link rel="stylesheet" href="./standard.css">
     <link rel="stylesheet" href="./style.css">
     <link rel="shortcut icon" href="./icon/taxameter.png" type="image/x-icon">
-    <title>Document</title>
+    <title>Tax-O-Meter</title>
 </head>
 <body>
     
