header and footer added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <title>Tax-O-Meter</title>
 </head>
 <body>
+    <header>
+        <h1>Tax-O-Meter</h1>
+    </header>
+    <main></main>
+    <footer></footer>
     
 </body>
 </html>
