--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <h1>Tax-O-Meter</h1>
     </header>
     <main></main>
-    <footer></footer>
+    <footer>
+        <p class="copyright">&copy Die Buddys</p>
+    </footer>
     
 </body>
 </html>
